--- a/index.html
+++ b/index.html
@@ -10,8 +10,18 @@
 </head>
 <body>
   <div id="root">
+  <div class="container">
+    <div class="prev">
+      <i class="fas fa-arrow-left" @click="prev"></i>
+    </div>
+    <div class="slider">
+      <img :src="imgSrc[0]">
+    </div>
+    <div class="next">
+      <i class="fas fa-arrow-right"></i>
+    </div>
+  </div>
 
-    
   </div>
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
   <script src="./assets/js/main.js" charset="utf-8"></script>
