--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       <i class="fas fa-arrow-left" @click="prev"></i>
     </div>
     <div class="slider">
-      <img :src="imgSrc[0]">
+      <img :src="imgSrc[index]">
     </div>
     <div class="next">
-      <i class="fas fa-arrow-right"></i>
+      <i class="fas fa-arrow-right" @click="next"></i>
     </div>
   </div>
 
