--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
       <i class="fas fa-arrow-right" @click="next"></i>
     </div>
   </div>
+  <div class="container">
+    <div class="dot">
+      <i v-for="dot in imgSrc.length" class="fas fa-circle" :class='attiva'></i>
+    </div>
+  </div>
 
   </div>
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
